tests/typescript/neg/arrays/arr-00.ts

/*@ foo :: (#Array[#Immutable,number]) => number */
function foo(a) {  
  return a[0];
}

foo([]);
